# comcigan-py

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  README.en.md  README.ko.md  README.md  pyproject.toml  requirements.txt  setup.py  test.py  test_search.py
.github/workflows/: ci.yml  test.yml
comcigan/: __init__.py  async_school.py  reg.py  school.py  school_new.py
test/: test_school.py  test_search.py
