[tool.poetry]
name = "comcigan"
version = "2.0.0"
description = "Unofficial Comcigan API python wrapper"
authors = ["Coder-Iro <doohee006@gmail.com>", "Minsu Kim <minsu.kim@hanarin.uk>"]
license = "LGPL-3.0"
readme = "README.md"
repository = "https://github.com/Coder-Iro/comcigan-py"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.style.dependencies]
black = "^24.0.0"
isort = "^5.12.0"

[tool.poetry.group.type.dependencies]
mypy = "^1.4.1"

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src"]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"